tests/js/error/semantics/builtin_array4.js
/*******************************************************************************
    Copyright (c) 2012, S-Core.
    All rights reserved.

    Use is subject to license terms.

    This distribution may include materials developed by third parties.
 ******************************************************************************/

var x = new Array(1, 2, 3);

var __result1 = x.length
var __expect1 = 3
var __result2 = x[0]
var __expect2 = 1
var __result3 = x[1]
var __expect3 = 2
var __result4 = x[2]
var __expect4 = 3
var __result5 = x[3]
var __expect5 = undefined

